--- a/FlightQuery.Web/wwwroot/css/home.css
+++ b/FlightQuery.Web/wwwroot/css/home.css
@@ -42,6 +42,15 @@ h2, h3 {
     background: none repeat scroll 0 0 #FFFFFF;
 }
 
+#discussion textarea {
+    background: url(http://i.imgur.com/2cOaJ.png);
+    background-attachment: local;
+    background-repeat: no-repeat;
+    padding-left: 35px;
+    padding-top: 10px;
+    border-color: #ccc;
+}
+
 .wrap {
     position: relative;
     margin: 0 auto;
@@ -101,9 +110,9 @@ h2, h3 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-    #results .error {
-        color: Red;
-    }
+#results .error {
+    color: Red;
+}
 
 table {
     border-spacing: 0px;
