--- a/FlightQuery.Web/Views/Shared/_Layout.cshtml
+++ b/FlightQuery.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <title>@ViewBag.Title</title>
 
     <link rel="stylesheet" media"screen" href="@Url.Content("~/css/home.css?v=1")" />
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <script src="http://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="@Url.Content("~/lib/jquery/dist/jquery.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/home.js?v=1")" type="text/javascript"></script>
 
