--- a/FlightQuery.Web/Views/Shared/_Layout.cshtml
+++ b/FlightQuery.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,9 @@
 
     <link rel="stylesheet" media"screen" href="@Url.Content("~/css/home.css?v=1")" />
     <script src="http://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <script src="@Url.Content("~/lib/ace/ace.js")"></script>
+    <script src="@Url.Content("~/lib/ace/mode-mysql.js")"></script>
+    <script src="@Url.Content("~/lib/ace/ext-language_tools.js")"></script>
     <script src="@Url.Content("~/lib/jquery/dist/jquery.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/home.js?v=1")" type="text/javascript"></script>
 
