--- a/FlightQuery.Web/wwwroot/css/home.css
+++ b/FlightQuery.Web/wwwroot/css/home.css
@@ -37,7 +37,7 @@ h2, h3 {
 }
 
 #discussion {
-    width: 880px;
+    width: 950px;
     padding: 15px;
     background: none repeat scroll 0 0 #FFFFFF;
 }
@@ -57,7 +57,7 @@ h2, h3 {
 }
 
 .xcw8 {
-    width: 910px;
+    width: 980px;
 }
 
 #content-wrap {
@@ -74,7 +74,7 @@ h2, h3 {
 
 
 #code {
-    width: 510px;
+    width: 610px;
     height: 200px;
     border: 1px solid black;
 }
@@ -105,13 +105,20 @@ h2, h3 {
     color: Red;
 }
 
+.green-form input.error {
+    border: solid 2px red;
+}
+
 table {
     border-spacing: 0px;
+    font-size: 12px;
 }
 
 .data th, .data td {
-    padding: 3px 10px;
+    padding: 1px 5px;
     text-align: left;
+    border: 1px solid black;
+    white-space: nowrap;
 }
 
 .none {
