--- a/FlightQuery.Web/Views/Home/Index.cshtml
+++ b/FlightQuery.Web/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
 <div id="sitenav-wrapper" class="wrapper">
     <div id="sitenav-wrap" class="wrap xxw8">
         <span id="tagline">
-            Query FlightAware FlightXML using SQL
+            Query FlightAware FlightXML API using SQL
         </span>
     </div>
 </div>
@@ -77,10 +77,7 @@
             <div class="title">Examples</div>
             <div id="examples">
                 <a href="" query="airportInfo">Austin Airport Info</a>
-                <a href="" query="gir">Greens in regulation</a>
-                <a href="" query="girBirdies">One putt birdies</a>
-                <a href="" query="saves">Missed green par (Save)</a>
-                <a href="" query="missedSave">Missed green bogeys</a>
+                <a href="" query="austinDepartures">Austin Airport Departures</a>
             </div>
         </div>
         <div id="results" style="float:left; width:880px; overflow-x:auto">
