--- a/FlightQuery.Web/Views/Home/Index.cshtml
+++ b/FlightQuery.Web/Views/Home/Index.cshtml
@@ -78,6 +78,7 @@
             <div id="examples">
                 <a href="" query="airportInfo">Austin Airport Info</a>
                 <a href="" query="austinDepartures">Austin Airport Departures</a>
+                <a href="" query="austinDeparturesFriendly">Austin Airport Departures Friendly</a>
             </div>
         </div>
         <div id="results" style="float:left; width:880px; overflow-x:auto">
