Add example. Run Selected Text

--- a/FlightQuery.Web/Views/Home/Index.cshtml
+++ b/FlightQuery.Web/Views/Home/Index.cshtml
@@ -79,6 +79,7 @@
                 <a href="" query="airportInfo">Austin Airport Info</a>
                 <a href="" query="austinDepartures">Austin Airport Departures</a>
                 <a href="" query="austinDeparturesFriendly">Austin Airport Departures Friendly</a>
+                <a href="" query="austinDeparturesNoCancelled">Austin Airport Departures Not Cancelled</a>
             </div>
         </div>
         <div id="results" style="float:left; width:880px; overflow-x:auto">
