--- a/FlightQuery.Web/Views/Home/Index.cshtml
+++ b/FlightQuery.Web/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                     <input class="input-text" title="Username" id="username" name="username" type="text" value="">
                 </fieldset>
                 <fieldset>
-                    <label>Password:</label>
+                    <label>API Key:</label>
                     <input class="input-text" title="Password" id="pass" name="pass" type="password" value="">
                 </fieldset>
             </div>
@@ -79,7 +79,7 @@
                 <a href="" query="airportInfo">Austin Airport Info</a>
                 <a href="" query="austinDepartures">Austin Airport Departures</a>
                 <a href="" query="austinDeparturesFriendly">Austin Airport Departures Friendly</a>
-                <a href="" query="austinDeparturesNoCancelled">Austin Airport Departures Not Cancelled</a>
+                <a href="" query="austinDeparturesNoStatus">Austin Airport Departures Status</a>
             </div>
         </div>
         <div id="results" style="float:left; width:880px; overflow-x:auto">
