--- a/FlightQuery.Web/wwwroot/css/home.css
+++ b/FlightQuery.Web/wwwroot/css/home.css
@@ -98,8 +98,11 @@ h2, h3 {
 }
 
 #results {
-    margin-top: 15px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.result {
+    margin-top: 15px;
 }
 
 #results .error {
