--- a/FlightQuery.Web/Views/Home/Index.cshtml
+++ b/FlightQuery.Web/Views/Home/Index.cshtml
@@ -131,7 +131,7 @@ where airport = 'kaus' and actualdeparturetime != 0 and filter = 'airline'
                 <tr></tr>
                 <tr>
                     {{#each columns}}
-                    <th>{{this}}</th>
+                    <th>{{this.name}}</th>
                     {{/each}}
                 </tr>
             </thead>
