--- a/FlightQuery.Web/Views/Home/Index.cshtml
+++ b/FlightQuery.Web/Views/Home/Index.cshtml
@@ -103,6 +103,7 @@ select e.ident,
     actualdeparturetime,
     filed_departuretime,
     estimatedarrivaltime,
+    estimatedarrivaltime - UTC_TIMESTAMP() as timeLeft,
     originCity,
     destinationCity,
     latitude,
